...
            />
          </View>
          <View style={{ flex: 1 }}>
            <Button
              title={t('search')}
              onPress={handleSearch}
              testID="search-apply-button"
            />
          </View>
        </View>
      </KeyboardAvoidingView>
    </Modal>
  );
...
